src/test/deca/syntax/invalid/created/testinstr.deca
// Programme Deca pour tester un programme sans main et sans listdeclclass
// Date: 22/01/2024
// Auteur: Jerome



println("Casted object created");
    